HPS-75 feat: fix errors